--- a/Clinic/src/main/webapp/resources/scaffold/pageTemplate.xhtml
+++ b/Clinic/src/main/webapp/resources/scaffold/pageTemplate.xhtml
@@ -13,6 +13,7 @@
 	<h:outputStylesheet name="font-awesome.min.css" library="css" />
 
 	<h:outputStylesheet name="forge-style-overriden.css" />
+	<h:outputStylesheet name="css/helper.css" />
 	<h:outputStylesheet name="override.css" />
 
 	<h:outputScript library="primefaces" name="jquery/jquery.js"
